Fixed: cities alignment in profile

--- a/public/static/css/profile.css
+++ b/public/static/css/profile.css
@@ -105,7 +105,7 @@
   }
 
   .cities-div {
-    top: 55px;
+    top: 55px !important;
   }
 }
 
